--- a/app/src/main/res/layout/recyclerview_list_item.xml
+++ b/app/src/main/res/layout/recyclerview_list_item.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/text_titre"
-        android:text="@string/text_Titre"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:textSize="20sp">
 
     </TextView>
 
     <TextView
         android:id="@+id/text_desc"
-        android:text="@string/text_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:textSize="20sp">
     </TextView>
+
 </LinearLayout>
